# prava

./: .gitignore  README.md  docker-compose.yml  render.yaml  temp_prava_bundle.js  temp_prava_signup.html
apps/backend/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
apps/backend/db/: README.md
apps/backend/db/migrations/: 0001_database_foundation.sql  0002_database_domain_expansion.sql  0003_database_functions_triggers_jobs_partitions.sql  0003_message_idempotency.sql  0006_e2e_keys.sql  0007_user_profile.sql  0009_profile_details.sql  0010_user_settings.sql  0012_user_details.sql  0013_notifications.sql  0014_settings_features.sql
apps/backend/db/rollbacks/: 0001_database_foundation.sql  0002_database_domain_expansion.sql  0003_database_functions_triggers_jobs_partitions.sql
apps/backend/db/seeds/: 0001_foundation_seed.sql  0002_domain_seed.sql
apps/backend/db/validation/: 001_database_contract.sql  002_operational_checks.sql
apps/backend/docker/: Dockerfile  docker-compose.yml  healthcheck.sh
apps/backend/scripts/: load-chat.mjs  migrate.ts  seed.ts
apps/backend/scripts/load/: ws-chat.js
apps/backend/src/: app.config.ts  app.module.ts  app_state.cpp  app_state.h  main.cpp  main.ts  server.ts  workers.ts
apps/backend/src/app/: bootstrap-scheduler.ts  bootstrap-worker.ts
apps/backend/src/common/: config.schema.ts  constants.ts
apps/backend/src/config/: config.cpp  config.h  env.ts
apps/backend/src/db/: sql.h
apps/backend/src/email/: email_service.cpp  email_service.h  resend.client.ts  templates.ts
apps/backend/src/filters/: jwt_filter.cpp  jwt_filter.h  rate_limit_filter.cpp  rate_limit_filter.h
apps/backend/src/http/: json.cpp  json.h  request_id.cpp  request_id.h  response.cpp  response.h
apps/backend/src/lib/: auth.ts  cloudinary.ts  database-domain-migrations.ts  database-foundation.ts  email.ts  mongo.ts  pg.ts  redis.ts  security.ts
apps/backend/src/media/: s3.client.ts
apps/backend/src/notifications/: push.provider.ts
apps/backend/src/observability/: metrics.controller.ts  metrics.interceptor.ts  metrics.ts
apps/backend/src/queue/: bullmq.config.ts
apps/backend/src/realtime/: presence.manager.ts  presence_manager.cpp  presence_manager.h  sync.service.ts  sync_service.cpp  sync_service.h  ws.auth.ts  ws.fanout.ts  ws.hub.ts  ws.router.ts  ws.server.ts  ws_controller.cpp  ws_controller.h  ws_fanout.cpp  ws_fanout.h  ws_hub.cpp  ws_hub.h  ws_registry.cpp  ws_registry.h  ws_router.cpp  ws_router.h
apps/backend/src/redis/: index.ts  redis.client.ts  redis.keys.ts  (+1 more)
apps/backend/test/: api-v1.contract.test.ts  chat.integration.test.ts  database-domain.test.ts  database-foundation.test.ts  feed.recommendation.test.ts  legacy-auth.integration.test.ts
(+616 files in other folders)
